<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <!--I use ConstraintLayout because it is more versatile
    and easy to specify the view positions based on screen sizes.-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/WelcomeScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_screen"
        tools:context=".screens.WelcomeFragment">


        <TextView
            android:id="@+id/WelcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:fontFamily="sans-serif"
            android:text="@string/welcome_title"
            android:textColor="@android:color/white"
            android:textSize="85sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/WelcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_shoe_store"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="@+id/WelcomeTitle"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="@+id/WelcomeTitle"
            app:layout_constraintTop_toBottomOf="@+id/WelcomeTitle" />

        <!--        Button to navigate to Instruction screen-->
        <Button
            android:id="@+id/InstructionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/input_bg"
            android:backgroundTint="@android:color/white"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/instruction_button"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/WelcomeText"
            app:layout_constraintStart_toStartOf="@+id/WelcomeText"
            app:layout_constraintTop_toBottomOf="@+id/WelcomeText"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/StarImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/star_image"
            android:src="@android:drawable/btn_star"
            app:layout_constraintBottom_toTopOf="@+id/WelcomeTitle"
            app:layout_constraintEnd_toEndOf="@+id/WelcomeTitle"
            app:layout_constraintStart_toStartOf="@+id/WelcomeTitle"
            tools:ignore="ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>